# go_viewer

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  analysis_state.cpp  analysis_state.hpp  catalog.cpp  catalog.hpp  game_index.cpp  game_index.hpp  game_state.cpp  game_state.hpp  go  go_rules.cpp  go_rules.hpp  go_viewer.c  go_viewer.hpp  main.cpp  palette.hpp  rename_games.py  renderer.cpp  renderer.hpp  test.sgf
games/Cho Chikun/: 1971-02-21_Cho-Chikun__Ishida-Akira.sgf  1972-06-04_Cho-Chikun__Kojima-Takaho.sgf  1972-06-20_Cho-Chikun__Kobayashi-Koichi.sgf  1972-07-02_Cho-Chikun__Takemiya-Masaki.sgf  1972-07-30_Cho-Chikun__Kobayashi-Koichi.sgf  1973-01-31_Cho-Chikun__Sakata-Eio.sgf  1973-06-03_Kawamura-Masamichi__Cho-Chikun.sgf  1974-01-10_Ishigure-Ikuro__Cho-Chikun.sgf  1974-06-09_Cho-Chikun__Takagi-Shoichi.sgf  1974-08-04_Haruyama-Isamu__Cho-Chikun.sgf  1974-09-01_Cho-Chikun__Kobayashi-Koichi.sgf  1974-10-17_Cho-Chikun__Sato-Sunao.sgf  1974-11-27_Haruyama-Isamu__Cho-Chikun.sgf  1975-03-13_Cho-Chikun__Fujisawa-Hideyuki.sgf  1975-04-03_Cho-Chikun__Kada-Katsuji.sgf  1975-05-01_Kato-Masao__Cho-Chikun.sgf  1975-05-21_Kusunoki-Teruko__Cho-Chikun.sgf  1975-06-26_Hashimoto-Utaro__Cho-Chikun.sgf  1975-07-10_Kato-Masao__Cho-Chikun.sgf  1975-07-20_Cho-Chikun__Kurosawa-Tadanao.sgf  1975-07-31_Cho-Chikun__Kato-Masao.sgf  1975-11-20_Ohira-Shuzo__Cho-Chikun.sgf  1975-12-04_Rin-Kaiho__Cho-Chikun.sgf  1975-12-11_Cho-Chikun__Hiroe-Katsuhiko.sgf  1975-12-18_Shimamura-Toshihiro__Cho-Chikun.sgf  1976-01-08_Fujisawa-Hosai__Cho-Chikun.sgf  1976-01-29_Cho-Chikun__Fujisawa-Hideyuki.sgf  1976-02-22_Cho-Chikun__Kanashima-Tadashi.sgf  1976-03-14_Cho-Chikun__Sakata-Eio.sgf  1976-04-18_Takagawa-Kaku__Cho-Chikun.sgf  1976-07-22_Cho-Chikun__Fujisawa-Hosai.sgf  1976-08-26_Ishigure-Ikuro__Cho-Chikun.sgf  1976-09-05_Cho-Chikun__Hashimoto-Shoji.sgf  1976-09-09_Cho-Chikun__Kobayashi-Koichi.sgf  1976-10-21_Cho-Chikun__Rin-Kaiho.sgf  1976-11-04_Cho-Chikun__Kato-Masao.sgf  1976-11-25_Otake-Hideo__Cho-Chikun.sgf  1976-12-02_Cho-Chikun__Kubouchi-Shuchi.sgf  1977-01-06_Cho-Chikun__Sakata-Eio.sgf  1977-01-27_Rin-Kaiho__Cho-Chikun.sgf  (+2108 more)
games/Choi Jeong/: 2010-10-03_Choi-Jeong__Hei-Jiajia.sgf  (+890 more)
(+6127 files in other folders)
